--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
 # Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -18,6 +10,11 @@
 *.zip
 *.tar.gz
 *.rar
+.idea
+.gradle
+build/
+out/
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
