--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-plugin.uuid=29f3ef4d-7203-406b-a357-1a1c3ac0b9d7
+plugin.uuid=15afe68d-b0b6-4460-b895-12dcc7b07a3e
 plugin.name=sample-plugin
 X-TENANT-ID=1
 X-TENANT-ENV=cosight
+X-TENANT-NAME=cosight
